--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "static-eval": "^1.1.1",
     "underscore": "^1.8.3"
   },
-  "browser": {
+  "browser": "./jsonpath.js",
+  "alias": {
     "./lib/aesprim.js": "./generated/aesprim-browser.js"
   },
   "devDependencies": {
