--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": "node lib/aesprim.js > generated/aesprim-browser.js",
     "test": "mocha -u tdd test && jscs lib && jshint lib",
-    "generate": "node bin/generate_parser.js > generated/parser.js"
+    "generate": "node bin/generate_parser.js > generated/parser.js && grunt"
   },
   "dependencies": {
     "esprima": "^2.0.0",
@@ -21,13 +21,13 @@
     "path": false
   },
   "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-browserify": "3.8.0",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-uglify": "0.9.1",
-    "jscs": "1.10.0",
-    "jshint": "2.6.0",
-    "mocha": "^3.1.0"
+    "grunt": "^1.3.0",
+    "grunt-browserify": "^5.3.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-uglify": "^5.0.0",
+    "jscs": "^3.0.7",
+    "jshint": "^2.12.0",
+    "mocha": "^8.1.3"
   },
   "repository": {
     "type": "git",
